# oscomp-kernel-training-DarkAngelEX

./: .gitignore  2022_10_12_13_59_21.txt  2022_10_12_14_14_31.txt  README.en.md  README.md  kernel-qemu  makefile  tip.txt
code/kernel/: .gitignore  Cargo.toml  Makefile  build.rs  build.sh  clear_nfs.sh  result_qemu.txt  run  run_all_case  send_nfs.sh  tip.txt
code/kernel/.cargo/: config.toml
code/kernel/src/: config.rs  console.rs  debug.rs  lang_items.rs  link_app.S  loader.rs  main.rs  sbi.rs  timer.rs
code/kernel/src/benchmark/: benchmark.S  mod.rs
code/kernel/src/boards/: qemu.rs
code/kernel/src/drivers/: crc.rs  mod.rs
code/kernel/src/drivers/__blockdev/: mod.rs
code/kernel/src/drivers/block/: mod.rs  sdcard.rs  virtio_blk.rs
code/kernel/src/drivers/hifive_spi/: mod.rs
code/kernel/src/drivers/spi_sd/: mod.rs
code/kernel/src/elf/: mod.rs
code/kernel/src/executor/: mod.rs
code/kernel/src/fdt/: mod.rs
code/kernel/src/fs/: inode.rs  mod.rs  pipe.rs  stat.rs  stdio.rs
code/kernel/src/fs/dev/: mod.rs  null.rs  tty.rs  zero.rs
code/kernel/src/fs/proc/: meminfo.rs  mod.rs  mounts.rs
code/kernel/src/fs/vfs/: dentry.rs  inode.rs  manager.rs  mod.rs  mount.rs  super_block.rs
code/kernel/src/futex/: mod.rs  queue.rs
code/kernel/src/hart/: cpu.rs  floating.rs  interrupt.rs  mod.rs  sbi.rs  sfence.rs
code/kernel/src/hart/boot/: entry64.asm  linker-qemu.ld  (+1 more)
code/kernel/src/hifive/: clock.rs  mod.rs
code/kernel/src/local/: always_local.rs  mailbox.rs  mod.rs  task_local.rs
code/kernel/src/memory/: address.rs  asid.rs  auxv.rs  frame_allocator.rs  heap_allocator.rs  manager.rs  mod.rs  page_table.rs  rcu.rs  shared.rs  stack.rs  user_ptr.rs  user_space.rs
code/kernel/src/message/: mod.rs
code/kernel/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  mod.rs  page_table.rs
code/kernel/src/process/: children.rs  context.rs  exit.rs  fd.rs  mod.rs  pid.rs  proc_table.rs  resource.rs  search.rs  signal.rs  switch.rs  thread.rs  tid.rs  userloop.rs
code/kernel/src/riscv/: cpu.rs  csr.rs  mod.rs  sbi.rs  sfence.rs
code/kernel/src/scheduler/: app.rs  manager.rs  mod.rs
code/kernel/src/signal/: context.rs  manager.rs  mod.rs  rtqueue.rs
code/kernel/src/sync/: even_bus.rs  mod.rs  mutex.rs  sleep_mutex.rs
code/kernel/src/syscall/: fs.rs  futex.rs  mmap.rs  mod.rs  net.rs  process.rs  random.rs  resource.rs  signal.rs  sync.rs  thread.rs  time.rs
code/kernel/src/task/: children.rs  context.rs  mod.rs  pid.rs  switch.S  switch.rs  thread.rs  tid.rs
code/kernel/src/timer/: mod.rs  sleep.rs
code/kernel/src/tools/: color.rs  error.rs  mod.rs  path.rs  range.rs  xasync.rs
code/kernel/src/trap/: context.rs  kernel_interrupt.rs  mod.rs  trap.S
code/kernel/src/user/: check.rs  check_impl.S  check_impl.rs  iter.rs  mod.rs  tools.rs  trap_handler.rs
code/kernel/src/xdebug/: mod.rs  stack_trace.rs  trace.rs
code/vfs/: Cargo.toml
code/vfs/src/: hash_name.rs  lib.rs
code/vfs/src/dentry/: index.rs  lru_queue.rs  manager.rs  mod.rs
code/vfs/src/file/: mod.rs  select.rs
code/vfs/src/fssp/: mod.rs
code/vfs/src/inode/: mod.rs
code/vfs/src/manager/: mod.rs  path.rs
code/vfs/src/mount/: manager.rs  mod.rs
code/vfs/src/spfs/: mod.rs
code/vfs/src/test/: mod.rs  xasync.rs
code/vfs/src/tmpfs/: mod.rs  tdir.rs  tfile.rs
(+332 files in other folders)
