[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { path = "../dependencies/riscv", features = ["inline-asm"] }
easy-fs = { path = "../easy-fs" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
k210-pac = { git = "https://github.com/wyfcyx/k210-pac" }
k210-hal = { git = "https://github.com/wyfcyx/k210-hal" }
k210-soc = { git = "https://github.com/wyfcyx/k210-soc" }

# riscv = "0.7.0"
# bare-metal = "0.2.5"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.8"
bitflags = "1.3.2"
bit_field = "0.10.1"
xmas-elf = "0.8.0"
async-task = { version = "4.2.0", default-features = false }

[features]
board_qemu = []
