[package]
name = "kernel"
version = "0.1.0"
authors = ["Zili Ye <dark75132angel@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
ftl-util = { path = "../ftl-util" }
vfs = { path = "../vfs" }
riscv = { path = "../dependencies/riscv", features = ["inline-asm"] }
fat32 = { path = "../fat32" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
# k210-pac = { git = "https://github.com/wyfcyx/k210-pac" }
# k210-hal = { git = "https://github.com/wyfcyx/k210-hal" }
# k210-soc = { git = "https://github.com/wyfcyx/k210-soc" }

# riscv = "0.7.0"
# bare-metal = "0.2.5"
# lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.8"
bitflags = "1.3.2"
bit_field = "0.10.1"
xmas-elf = "0.8.0"
# async-task = { version = "4.2.0", default-features = false }
async-task = { path = "../dependencies/async-task", default-features = false }


[features]
# default = []
# default = ["submit"]
# default = ["stack_trace"]
# default = ["stack_trace", "submit"]
board_qemu = []
board_hifive = []
submit = []
stack_trace = ["ftl-util/stack_trace", "fat32/stack_trace"] # 程序panic后显示逻辑调用栈, 异步调试必备

# https://zhuanlan.zhihu.com/p/476524365
[profile.dev]
opt-level = 1
debug = 2
debug-assertions = true # 断言标志
overflow-checks = true  # 算数溢出检测
lto = false             # 链接期优化
incremental = true      # 增量编译
codegen-units = 10000   # 代码生成单元

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
incremental = false
codegen-units = 16
