[package]
name = "vfs"
version = "0.1.0"
authors = ["Zili Ye <dark75132angel@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftl-util = { path = "../ftl-util" }
bitflags = "1.3.2"

[features]
stack_trace = ["ftl-util/stack_trace"]
libc_output = ["ftl-util/libc_output"]

[profile.dev]
opt-level = 1
debug = 2
debug-assertions = true # 断言标志
overflow-checks = true  # 算数溢出检测
lto = false             # 链接期优化
incremental = true      # 增量编译
codegen-units = 128     # 代码生成单元

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
incremental = false
codegen-units = 1
